--- a/dailies/10032025.md
+++ b/dailies/10032025.md
@@ -10,3 +10,5 @@ Need pics for products, and also for the homepage slideshow.
 
 I need to create the product page template, so that way I can actually start
 cooking up.
+
+- [~] Check if anything on Tuesday 
