--- a/dailies/12-04-2024.md
+++ b/dailies/12-04-2024.md
@@ -1,5 +1,5 @@
 - What did I do today?
-I made a statue visible through the plants growing around it
+I made a staue visible through the plants growing around it
 I got stabbed by multiple thorns
 I cleaned up a bunch of leaves and hedge clippings
 I got to use the hedge trimmer again for a short time, until it decided to have another issue
