--- a/dailies/16032025.md
+++ b/dailies/16032025.md
@@ -4,3 +4,10 @@ Type: #daily
 
 ## Ask for extra sheets or a blanket
 
+Schumann/Fellowship hall is the gym
+
+Trinity pools courtyard
+
+Heritage/Faust house is the schoolroom
+
+Narthex is the opening room with Scripture on the walls
