Vault updates: workspace-mobile 24032025 25032025

--- a/dailies/24032025.md
+++ b/dailies/24032025.md
@@ -2,4 +2,4 @@ Created: 2025-03-24
 
 Type: #daily
 
-The Lord’s day 5-6 or the Heidelburg speak of the reason for the incarnation
+The Lord’s day 5-6 of the Heidelburg speak of the reason for the incarnation
