Vault updates: bookmarks core-plugins workspace-mobile Work Hours 2025 01042025 03042025 04042025 06042025 07032025 08032025 08042025 09042025 10032025 11032025 12032025 15032025 16032025 17032025 19032025 23032025 24032025 28032025 29032025 31032025 Albums to Own Boxes Movies for date night Relationship Notes Be calm. Think clear. Belle's Crafts Brainstorming Brain rot Class Notes - 1.5.25 Death used to be an executioner Do I fear Death? Escapism Ghosting, orbiting, breadcrumbing, and other modern relationship terms explained How modern dating trends can get in the way of love If you're dating right now, you're brave Just and Unjust Modern dating and relationship problems NPC music No greater agony No man knows how bad he is... Of God and Waiting On Life, the Memory of Pleasure, and the Upkeep of the Mind Perelandra Highlights - Philosophy Psalm 51 Repetitive Pleasure SCP-8177 Social anxiety in dating Suffering The Person of Jesus (Full Lesson) The Purpose of Our Faith 1 The Purpose of Our Faith The Serenity Prayer The anti-smartphone movement The effects of sex positivity Thoughts on Scrolling Thrawn Trilogy Review To sell one is to lose the other Two ways to get enough Valley of tears What does the fact that Jesus took on a fully human nature tell us about what it means to be human? Why millenials are using the word 'partner' Without God... Worthy belles-crafts-worklist child-sexual-abuse-training sunk-cost-fallacy swift-doc-notes Arch Install (UEFI) Boxes Movies for date night Relationship Notes Movies for date night Relationship Notes The Seed The Unfathomable Generosity of God tailscale-ubuntu-2204 daily

--- a/dailies/03042025.md
+++ b/dailies/03042025.md
@@ -1,6 +1,6 @@
 Created: 2025-04-03
 
-Type: #daily
+Type: [[daily]]
 
 April 13th: Family going to earlier service, I can drive and go to the 11. 
 
