--- a/dailies/29032025.md
+++ b/dailies/29032025.md
@@ -1,6 +1,6 @@
 Created: 2025-03-29
 
-Type: #daily
+Type: [[daily]]
 
 Finances will be planned in the last Saturday of each month (subject to change)
 
@@ -8,6 +8,6 @@ Any days missed from the end of the previous month will be included in the month
 
 Created: 2025-03-29
 
-Type: #daily
+Type: [[daily]]
 
 [[remember]] to keep receipts for each purchase to later add to budget track
