--- a/dailies/08032025.md
+++ b/dailies/08032025.md
@@ -1,6 +1,6 @@
 Created: 080320251032
 
-Type: #daily
+Type: [[daily]]
 
 Had a slip-up this morning. I tried to justify it in some stupid way, and then just felt like crap afterwards.
 
