feat: updated student doctrinal statement commit 20250611 @ 1028

--- a/latex/student-bible-study.tex
+++ b/latex/student-bible-study.tex
@@ -14,26 +14,26 @@ discussing alongside our brothers in the faith. This will be a time almost
 solely devoted to studying and discussing the Word of God in a roundtable
 setting.
 
-\section{Doctrinal Foundations}
-
-\begin{itemize}
-
-	\item \textbf{First and foremost}, we shall use the Bible as the root of our
-	doctrinal statement. There is no better resource than the divine Word of
-	God itself.
-
-	\item \textbf{Second}, we'll use the Nicene Creed to ensure that all have a clear
-	understanding of the truth of the gospel.
-
-	\item \textbf{Third}, we'll use the Athanasian Creed predominantly for
-	its very clear and descriptive explanation of the triune and divine
-	nature of God and of the sacrifice of Christ on the cross.
-
-	\item \textbf{Fourth and finally}, we will use the 1689 London Baptist
-	Confession of Faith to help train our leaders in basic Baptist doctrinal
-	truths, as well as for a crash course in church history.
-
-\end{itemize}
+% \section{Doctrinal Foundations}
+%
+% \begin{itemize}
+%
+% 	\item \textbf{First and foremost}, we shall use the Bible as the root of our
+% 	doctrinal statement. There is no better resource than the divine Word of
+% 	God itself.
+%
+% 	\item \textbf{Second}, we'll use the Nicene Creed to ensure that all have a clear
+% 	understanding of the truth of the gospel.
+%
+% 	\item \textbf{Third}, we'll use the Athanasian Creed predominantly for
+% 	its very clear and descriptive explanation of the triune and divine
+% 	nature of God and of the sacrifice of Christ on the cross.
+%
+% 	\item \textbf{Fourth and finally}, we will use the 1689 London Baptist
+% 	Confession of Faith to help train our leaders in basic Baptist doctrinal
+% 	truths, as well as for a crash course in church history.
+%
+% \end{itemize}
 
 \section{Leadership}
 
@@ -52,24 +52,22 @@ leadership.
 
 \subsection{Leadership Resources}
 
-% \begin{itemize}
-%
-% 	\item The Bible: even though it's obvious, the root of our doctrinal
-% 	statement is the Bible itself. There is no greater resource than the
-% 	divine Word of God Himself.
-%
-% 	\item The Nicene Creed: this will be used to ensure that all of
-% 	our leaders have a clear understanding of the truth of the gospel.
-%
-% 	\item The Athanasian Creed: we'll use this creed predominately for
-% 	its very clear and descriptive explanation of the triune and divine
-% 	nature of God and of the sacrifice of Christ on the cross.
-%
-% 	\item The 1689 London Baptist Confession of Faith: we will this to help
-% 	train our leaders in basic Baptist doctrinal truths, as well as for a
-% 	crash course in church history.
-%
-% \end{itemize}
+To ensure that all leaders are on the same page, we have a list of resources
+that prospective leaders are required to read. That list is as follows:
+
+\begin{itemize}
+
+	% \item The Bible: even though it's obvious, the root of our doctrinal
+	% statement is the Bible itself. There is no greater resource than the
+	% divine Word of God Himself.
+
+	\item The Nicene Creed
+
+	\item The Athanasian Creed
+
+	\item The 1689 London Baptist Confession of Faith
+
+\end{itemize}
 
   We also hope to read the next article of the Heidelberg Catechism before we
 split into small groups each week.
@@ -91,17 +89,31 @@ split into small groups each week.
 discussion; that is to say, not teaching a lesson, but rather making sure that
 the conversation stays on track and is at least related to the passage.
 
-\section{Structure, Scheduling, and Communication}
+\section{Structure, Communication, and Accountability}
 
-\subsection{Structure}
+\subsection{Basic Structure}
 
 The basic structure is something that we're calling "Bible Study Book Club."
 
-Before the study: read and study the passage personally, and take notes.
+We will have an assigned section of study for that week (anywhere from one to
+three chapters, depending on length and content). In the week leading up to the
+next meeting, we will spend time studying the passage and taking notes like you
+would with any regular Bible study.
 
-During the study: bring notes and discuss the passage and compare notes.
+When we meet again the following week, we'll come together to have a roundtable
+discussion on what we read and compare notes.
 
-After the study: send notes in for compilation???
+\subsection{Scheduling}
+
+\subsection{Communication and Scheduling}
+
+	The method of communication is still up in the air as of the time of
+	writing (June 11, 2025), but we still have a few ideas.
+
+	The preferred method is to have the group move to Discord (messaging
+	platform with extensive group moderation and organization features) and
+	have separate channels (chats within the group) for different topics
+	(prayer requests, announcements, etc.)
 
 \subsection{Accountability}
 
@@ -111,12 +123,19 @@ After the study: send notes in for compilation???
 	\item Reading
 	\item Personal Bible study
 
+		% The study for the group should not be a replacement for your own
+		% personal time in the Word. Our faith should be our own, and we
+		% should have our own personal convictions, but we also need to
+		% stay rooted in the Word. By growing in understanding of the
+		% Bible through study, we can grow in discernment and in knowledge
+		% of the glory of our God.
+
 \end{itemize}
 
 \textbf{Prayer}
 \begin{itemize}
 
-	\item Prayer life
+	\item Personal prayer life
 	\item Prayer requests
 
 \end{itemize}
