--- a/latex/YMBC_Doctrinal_Statement.tex
+++ b/latex/YMBC_Doctrinal_Statement.tex
@@ -1,39 +1,58 @@
 \documentclass[12pt]{article}
 \title{Youth Men's Bible Study of FBC Keller: Doctrinal Statement and Guidelines}
-\author{Ben Flegel \and Jude Hurst-Bolster \and Lethan Hutchins \and Matthew Kennedy \and Nikolai Burgess }
+\author{Ben Flegel \and Jude Hurst-Bolster \and Lethan Hutchins \and Matthew
+Kennedy \and Nikolai Burgess }
 \date{June 2025}
 \begin{document}
 \maketitle{}
+
+% IF THE GROUP CAUSES DISUNITY OR A DIVIDE WITHIN THE CHURCH, OR IF WE BECOME
+% LABELLED AS TOO CALVINIST, THE CHURCH WILL STEP IN AND WE WILL NO LONGER BE
+% A GROUP ASSOCIATED WITH THEM.
+
+% Expectations rather than requirements
+
+% Roundtable as the focus
+
+% This is predominately an opportunity to invest in one another through study,
+% discussion, and fellowship
 
   This is the official doctrinal statement of the Youth Men's Bible Study of
 First Baptist Church of Keller.\footnote{Many items in this document are subject
 to change, as this is an early draft.}
 
-  The main goal with this is to grow in our understanding of God by reading and
-discussing alongside our brothers in the faith. This will be a time almost
-solely devoted to studying and discussing the Word of God in a roundtable
-setting.
+\section{The Goal of the Study}
 
-% \section{Doctrinal Foundations}
-%
-% \begin{itemize}
-%
-% 	\item \textbf{First and foremost}, we shall use the Bible as the root of our
-% 	doctrinal statement. There is no better resource than the divine Word of
-% 	God itself.
-%
-% 	\item \textbf{Second}, we'll use the Nicene Creed to ensure that all have a clear
-% 	understanding of the truth of the gospel.
-%
-% 	\item \textbf{Third}, we'll use the Athanasian Creed predominantly for
-% 	its very clear and descriptive explanation of the triune and divine
-% 	nature of God and of the sacrifice of Christ on the cross.
-%
-% 	\item \textbf{Fourth and finally}, we will use the 1689 London Baptist
-% 	Confession of Faith to help train our leaders in basic Baptist doctrinal
-% 	truths, as well as for a crash course in church history.
-%
-% \end{itemize}
+  Our goal is to uncover the truth of God's Word through study, discussion, and
+debate (not arguments, but more of a back and forth between brothers that is
+motivated by our mutual appreciation for scripture)
+
+To grow in knowledge and understanding of the Word, and to teach sound doctrine
+with brothers in the faith
+
+% Are we just filling our week with Bible study rather than going and doing the
+% work of the gospel?
+
+%   The main goal with this is to grow in our understanding of God by reading
+% and discussing alongside our brothers in the faith. This will be a time almost
+% solely devoted to studying and discussing the Word of God in a roundtable
+% setting.
+
+\section{Doctrine}
+
+% Take care that you know what you believe, why you believe it, and that it
+% is based solely in sound doctrine as can be found in scripture
+
+% We strive for theological unity
+
+  We also hope to read the next article of the Heidelberg Catechism before we
+split into small groups each week.
+
+\subsection{Doctrinal Disagreements}
+
+% Handle disagreements with grace
+
+% Handle disagreements with respect and an open mind
 
 \section{Leadership}
 
@@ -55,11 +74,10 @@ leadership.
 To ensure that all leaders are on the same page, we have a list of resources
 that prospective leaders are required to read. That list is as follows:
 
-\begin{itemize}
+% We affirm the Baptist Faith and Message (2000 Revision) and the Covenental
+% Statement of First Baptist Church of Keller, Texas.
 
-	% \item The Bible: even though it's obvious, the root of our doctrinal
-	% statement is the Bible itself. There is no greater resource than the
-	% divine Word of God Himself.
+\begin{itemize}
 
 	\item The Nicene Creed
 
@@ -67,15 +85,11 @@ that prospective leaders are required to read. That list is as follows:
 
 	\item The 1689 London Baptist Confession of Faith
 
+% add the BFM2000 and the church covenant???
+
 \end{itemize}
 
-  We also hope to read the next article of the Heidelberg Catechism before we
-split into small groups each week.
-
-  The reasoning behind having these resources is twofold:
-
 \begin{itemize}
-
 
 	\item \textbf{First}, so that we can ensure that all who wish to lead
 	have a firm foundation in the truth of the gospel.
@@ -93,15 +107,17 @@ the conversation stays on track and is at least related to the passage.
 
 \subsection{Basic Structure}
 
-The basic structure is something that we're calling "Bible Study Book Club."
+	The basic structure is something that we're calling "Bible Study Book Club."
 
-We will have an assigned section of study for that week (anywhere from one to
+	We will have an assigned section of study for that week (anywhere from one to
 three chapters, depending on length and content). In the week leading up to the
 next meeting, we will spend time studying the passage and taking notes like you
 would with any regular Bible study.
 
-When we meet again the following week, we'll come together to have a roundtable
+	When we meet again the following week, we'll come together to have a roundtable
 discussion on what we read and compare notes.
+
+\subsection{Worship}
 
 \subsection{Scheduling}
 
@@ -123,13 +139,6 @@ discussion on what we read and compare notes.
 	\item Reading
 	\item Personal Bible study
 
-		% The study for the group should not be a replacement for your own
-		% personal time in the Word. Our faith should be our own, and we
-		% should have our own personal convictions, but we also need to
-		% stay rooted in the Word. By growing in understanding of the
-		% Bible through study, we can grow in discernment and in knowledge
-		% of the glory of our God.
-
 \end{itemize}
 
 \textbf{Prayer}
@@ -138,6 +147,14 @@ discussion on what we read and compare notes.
 	\item Personal prayer life
 	\item Prayer requests
 
+\end{itemize}
+
+\textbf{Service}
+\begin{itemize}
+
+	\item How have you been serving the church?
+	\item How have you been serving outside of the church?
+	
 \end{itemize}
 
 \textbf{Purity}
