--- a/dailies/07142025.md
+++ b/dailies/07142025.md
@@ -9,3 +9,15 @@ Todo:
 - [ ] Figure out how to use nginx 
 - [ ] Do Bible study homework through day 4
 - [ ] 
+
+### Belle's Crafts
+
+- Cookies
+	- Session
+	- Cart saving
+- Account
+	Authentication will be by email and password, with no option for a sign in with <insert_corpo_service>.
+	You can still buy things without an account, but you will miss out on some functionality like:
+	- Save for later
+	- Order history
+	- Order tracking
