--- a/org/todo.org
+++ b/org/todo.org
@@ -1,15 +1,24 @@
 #+title: Todo
 
 * Inbox
-** TODO Write thank you note to P&G
+** TODO [#B] Write thank you note to P&G
+DEADLINE: <2025-07-21 Mon>
+<2025-07-21 Mon>
 - State "TODO"       from ""           [2025-07-20 Sun 19:25]
-** TODO Write thank you note to the Evan's
+** TODO [#B] Write thank you note to the Evan's
+DEADLINE: <2025-07-21 Mon>
+- State "TODO"       from ""           [2025-07-21 Mon 00:29]
 - State "TODO"       from ""           [2025-07-20 Sun 19:25]
-** TODO Email Rob about volunteering (list out skills)
+** TODO [#A] Email Rob about volunteering (list out skills)
+DEADLINE: <2025-07-21 Mon>
+<2025-07-21 Mon>
 - State "TODO"       from ""           [2025-07-20 Sun 19:25]
 
 ** TODO Clean Den
+DEADLINE: <2025-07-21 Mon>
 
 ** TODO Clean living room
+DEADLINE: <2025-07-21 Mon>
 
 ** TODO Clean my room
+DEADLINE: <2025-07-21 Mon>
