chore: project planning and agenda updates

--- a/org/agenda.org
+++ b/org/agenda.org
@@ -1,2 +1,12 @@
 #+title: Agenda
 
+Jul 21, 2025
+* DONE Clean Den
+* DONE Clean living room
+* DONE Clean my room
+* DONE Plan coffee with Doug
+* TODO Write thank you note to P&G
+* TODO Write thank you note to the Evan's
+* TODO Email Rob about volunteering (list out skills)
+Jul 22, 2025
+* Coffee with Doug <2025-07-21 Tue 16:00>
