--- a/org/agenda.org
+++ b/org/agenda.org
@@ -1,20 +1,26 @@
 #+title: Agenda
 
+Tuesday
+* Goals for the week
+** Development
+*** Style store page file://Users/matthewkennedy/Developer/web-dev/belles-crafts/
+*** Complete 4 rpg-in-go episodes
+** Personal
+*** Finish the 1689 Confession
+*** Finish Dune: Messiah
+
 Jul 21, 2025
 * DONE Clean Den
 * DONE Clean living room
 * DONE Clean my room
 * DONE Plan coffee with Doug
-Tuesday
-* Goals for the week
-** Development
-*** Create store page file://Users/matthewkennedy/Developer/web-dev/belles-crafts/
-*** Finish rpg-in-go series
-** Personal
-*** Finish the 1689 Confession
-*** Finish Dune: Messiah
-*** Write thank you cards
-
 Jul 22, 2025
-* TODO Mow the lawn
+* DONE Mow the lawn
 SCHEDULED: <2025-07-22 Tue 08:30>
+* DONE Email Rob about media volunteering <2025-07-22>
+* TODO Write thank you note to the Evans <2025-07-22>
+* TODO Write thank you note to P&G <2025-07-22>
+Jul 24, 2025
+* TODO Come up with project for hackathon
+Jul 25, 2025
+* TODO Trim hedges at P&G's <2025-07-25>
