chore: update org calendar

--- a/org/agenda.org
+++ b/org/agenda.org
@@ -2,25 +2,76 @@
 
 Tuesday
 * Goals for the week
+:PROPERTIES:
+:ID:       0f813a9a-af1e-42f8-95b7-46701d58e55b
+:END:
 ** Development
+:PROPERTIES:
+:ID:       42ce1bdc-4196-4bb9-9616-f5f4e110c58f
+:END:
 *** Style store page file://Users/matthewkennedy/Developer/web-dev/belles-crafts/
+:PROPERTIES:
+:ID:       0761c784-8f1f-48cf-b67b-eb7ab548d594
+:END:
 *** Complete 4 rpg-in-go episodes
+:PROPERTIES:
+:ID:       9546b3c1-ec35-4f72-8245-136ea77c0cfe
+:END:
 ** Personal
+:PROPERTIES:
+:ID:       f416af21-d2e1-4623-abf4-0189430f5a69
+:END:
 *** Finish the 1689 Confession
+:PROPERTIES:
+:ID:       59e80e5e-1bad-4e8a-8f0a-9b95965aaa10
+:END:
 *** Finish Dune: Messiah
+:PROPERTIES:
+:ID:       eeb2801f-fb3d-4a21-a4ff-affb029249a1
+:END:
 
 Jul 21, 2025
 * DONE Clean Den
+:PROPERTIES:
+:ID:       14f493e6-6834-429d-867d-983ed868fed9
+:END:
 * DONE Clean living room
+:PROPERTIES:
+:ID:       1650278b-39f7-4925-b890-eb5b836541b0
+:END:
 * DONE Clean my room
+:PROPERTIES:
+:ID:       71cfe448-2f0f-426f-933b-ab20776450f3
+:END:
 * DONE Plan coffee with Doug
+:PROPERTIES:
+:ID:       7b0c7744-f9bf-4aef-a665-7133f8a0fca0
+:END:
 Jul 22, 2025
 * DONE Mow the lawn
 SCHEDULED: <2025-07-22 Tue 08:30>
+:PROPERTIES:
+:ID:       ff8d9f4a-a14d-4168-85ad-4e4b1ac1925a
+:END:
 * DONE Email Rob about media volunteering <2025-07-22>
+:PROPERTIES:
+:ID:       c5e6652c-68a6-4015-a2da-86ebc9dab77a
+:END:
 * TODO Write thank you note to the Evans <2025-07-22>
+:PROPERTIES:
+:ID:       b1ec5922-3516-4817-91f0-f25655efbe81
+:END:
 * TODO Write thank you note to P&G <2025-07-22>
+:PROPERTIES:
+:ID:       89d86670-09d0-4665-91ed-a5e0da005e85
+:END:
 Jul 24, 2025
 * TODO Come up with project for hackathon
+:PROPERTIES:
+:ID:       92e02276-3326-42e5-a9f9-d939ba52d6f9
+:END:
 Jul 25, 2025
 * TODO Trim hedges at P&G's <2025-07-25>
+:PROPERTIES:
+:ID:       bc26e363-0cc6-4bc8-bd77-0da68821c5c4
+:END:
