Vault autocommit on iPhone

--- a/org/calendar.org
+++ b/org/calendar.org
@@ -90,3 +90,22 @@
 :CREATED: [2025-07-22 Tue 00:04]
 :CAPTURED: [[file:~/Notes/obsidian-vault/org/calendar.org::*Morning Discipleship][Morning Discipleship]]
 :END:
+** Gatlin's Birthday Party
+:PROPERTIES:
+:ID:       ab9cf1cc-480c-47eb-8b0a-2403d260ee13
+:END:
+<2025-08-02 Sat 17:00-19:30>
+:PROPERTIES:
+:CREATED: [2025-07-24 Thu 17:49]
+:END:
+* Deadlines
+:PROPERTIES:
+:ID:       66a0d729-59dc-43c3-8e18-df5f74a7af1b
+:END:
+** TODO Trim hedges at P&G's
+SCHEDULED: <2025-07-25 Fri 09:30>
+:PROPERTIES:
+:CREATED: [2025-07-24 Thu 00:13]
+:CAPTURED: [[file:~/Notes/obsidian-vault/org/projects.org::*Create Store Page @frontend][Create Store Page @frontend]]
+:ID:       f09c3173-cc87-44f3-9789-6e2700783c4a
+:END:
