--- a/org/done.org
+++ b/org/done.org
@@ -43,3 +43,9 @@ Jul 24, 2025
 CLOSED: [2025-07-24 Thu 10:35]
 ** DONE Bug: page not rendering
 CLOSED: [2025-07-24 Thu 10:35]
+* 2025-07-25 Friday
+** DONE Come up with project for hackathon
+CLOSED: [2025-07-25 Fri 00:32]
+:PROPERTIES:
+:ID:       92e02276-3326-42e5-a9f9-d939ba52d6f9
+:END:
